# datapizza-fullstack-test

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  run.py
backend/app/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py  run_tests.py  test_cache.py  test_documents_endpoint.py  test_error_handling.py  test_generate_endpoint.py
frontend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  README.md  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/chat/: Chat.tsx  ChatInput.tsx  ChatMessages.tsx  DocumentViewer.tsx  LoadingIndicator.tsx  Message.tsx  WelcomeMessage.tsx
frontend/src/components/ui/: popover.tsx
frontend/src/lib/: queries.ts
frontend/tests/: README.md
frontend/tests/lib/: mock-queries.test.ts  mock-queries.ts  mocks.ts
